# Martial_Arts_Site

./: README.md
technique_library/: .gitignore  Cargo.toml  docker-compose.yml
technique_library/migrations/: 20240505003835_init.down.sql  20240505003835_init.up.sql
technique_library/src/: handler.rs  lib.rs  main.rs  model.rs  route.rs  schema.rs
technique_library/src/handler/: insert_ma.rs
technique_library/tests/: tests.rs
