[package]
name = "technique_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#sqlx = { version = "0.5", features = ["postgres", "runtime-tokio", "runtime-tokio-native-tls"] }

#axum
#axum = "0.7.4"
#tokio = { version = "1.36.0", features = ["full"] }

#serde
#serde = { version = "1.0.196", features = ["derive"] }
#serde_json = "1.0.113"

#env 
#dotenvy = "0.15.7"

axum = "0.7.2"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
