[package]
name = "technique_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#minijinja
minijinja = "2.0.1"

#axum 
axum = "0.7.2"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }

#serde
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

#Database
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"